# fix_hidden_lifetime_bug.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  future-proof.yml
examples/: main.rs
src/: lib.rs
src/proc_macros/: Cargo.toml  append_captures_hack_to_impl_occurrences.rs  collect_lifetime_params.rs  manually_desugar_async.rs  manually_unsugar_async.rs  mod.rs  params.rs  showme.rs
tests/: main.rs  renamed.rs
tests/regressions/: _005.rs  _012.rs
