[package]
name = "fix-hidden-lifetime-bug"
version = "0.2.1"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
edition = "2018"
license = "Zlib OR MIT OR Apache-2.0"
description = """Proc-macro to write an automatic fix for the "hidden lifetime in impl Trait" issue"""
repository = "https://github.com/danielhenrymantilla/fix-hidden-lifetime-bug.rs"
documentation = "https://docs.rs/fix-hidden-lifetime-bug"
readme = "README.md"
keywords = ["impl", "lifetime", "bug", "hidden", "bound"]

[dependencies.proc-macros]
package = "fix-hidden-lifetime-bug-proc_macros"
version = "0.2.1"
path = "src/proc_macros"
optional = true

[features]
default = [
    "proc-macros",
]
showme = [
    "proc-macros/showme",
]

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
]
features = [
    "proc-macros",
]

[workspace]
members = ["src/proc_macros"]
